app/styles/app.less
/* ... */
.container {
  width: 95%;
  max-width: 1400px;
  min-width: 290px;
  color: white;
}

.month {
  .font-size(22);
  font-weight: 600;
  margin-bottom: 20px;
  .opacity(20);
  text-shadow: 0 -1px 0 black;
}

.btn {
  text-shadow: 0 -1px 0 @grayDark;
  border:none;
  background-color: #3c3f3f;
  .box-shadow(0 1px 2px #111);
  .transition(all 50ms ease-in);
  &:hover {
    background-color:#515454;
    .transition(all 50ms ease-out);
  }
}

.close {
  color: white;
  text-shadow:none;
  margin-bottom: 10px;
  position: absolute;
  right: 15px;
  top: 15px;
  height:26px;
  .transition(opacity 100ms ease-in);
  text-shadow:0 -1px 0 black;
  width:115px;
  .opacity(50);
  &:hover {
    color: white;
    .opacity(100);
  }
  h5 {
    font-weight: normal;
    text-transform: uppercase;
    .font-size(11);
    position:absolute;
    width: 82px;
    top: -11px;
    text-align: right;
    left:0;
  }
  span {
    position:absolute;
    right:0;
    top:0;
    margin: 0;
    .font-size(50);
  }
}

.arrow {
  z-index: 1;
  background: url(../images/arrow.svg) center top no-repeat transparent;
  background-size: 100% auto;
  display: block;
  width: 40px;
  height: 40px;
  position: absolute;
  left: 50%;
  bottom: 10%;
  margin-left: -20px;
  padding: 0;
  .transition(bottom 150ms ease-out);
  .border-radius(50%);
  border: none;
  &:hover,
  &:active,
  .next:hover & {
    .transition(all 150ms ease-in);
    background-color: rgba(255,255,255,0.2);
  }
  .loading &.loading-icon {
    width:44px;
    height:44px;
    margin-left: -22px;
    background: url(../images/loader.svg) center center no-repeat transparent;
    background-size: 100% auto;
    -webkit-animation: spin 2s infinite linear;
    @-webkit-keyframes spin {
      0% {
        -webkit-transform: rotate(0deg);
      }
      100% {
        -webkit-transform: rotate(-360deg);
      };
    }
  }
}

#intro-container {
  position: relative;
  background: url('/images/title-bg.png') no-repeat center top transparent;
  background-size: 100% auto;
  background-attachment: fixed;
  overflow: hidden;
  text-shadow: 0 -1px 0 black;
  .in-tour & {
    visibility: hidden;
  }
  &:after {
    content:'';
    display: block;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 202px;
    background: url('/images/noise-fader.png') repeat-x center bottom transparent;
    background-size: auto 202px;
    z-index: 0;
  }
  .title {
    position:relative;
    text-align: center;
    text-transform: uppercase;
    border-bottom: 1px solid rgba(0,0,0,0.5);
    .box-shadow(0 1px 0 rgba(255,255,255,.1));
    height: 100%;
    h1 {
      position:relative;
      font-family: @sansFontFamily;
      .font-size(168);
      font-weight: 800;
      letter-spacing: -.05em;
      margin-top: 0;
    }
    h2 {
      .font-size(30);
      font-weight: 100;
      letter-spacing: .05em;
      margin-bottom: 0;
    }
  }
  .intro {
    text-align: center;
    padding: 0 10% 0;
    max-width: 900px;
    font-weight: 100;
    margin: 0 auto;
    position: relative;
    z-index: 99;
    p {
      .font-size(26);
      line-height: 1.4;
      &:first-child{
        .font-size(34);
        font-style: italic;
        font-weight: 700;
        margin-bottom: 3%;
      }
      a {
        color:#999;
        border-bottom: 1px dotted #999;
        &:hover {
          color:white;
          border-color: white;
          text-decoration: none;
        }
      }
    }
    .arrow {
      position: relative;
      bottom:auto;
      left: auto;
      margin: 60px auto 0;
    }
  }
}

@gridCellSize: 30px;
#incidents {
  border-top: 1px solid rgba(255,255,255,.1);
  .box-shadow(0 -1px 0 rgba(0,0,0,0.5));
  margin: 0 auto;
  margin-top: 0;
  padding: 0 0 5%;
  .loading & {
    display: none;
  }
  .incident-grid {
    margin: 0 auto;
    clear: both;
    .date {
      min-height: @gridCellSize;
      margin: 30px 0 0 ;
    }
  }
}
.cellRGBA(@opacity: 1) {
  background-color: rgba(255, 255, 255, @opacity);
}

#incident-grid.filtering .incident:not(.filter-selected){
  .cellRGBA(0.05) !important;
  &:hover {
    .cellRGBA(1);
  }
}
#incident-grid.filtering .event:not(.filter-selected){
  .opacity(45);
  &:hover{
    .opacity(100);
  }
}
/* ... */

